K8s/Full_lab/website01.yaml
apiVersion: v1
kind: Pod
metadata:
  name: website01-html
  labels:
        app: website01
spec:
  containers:
    - name: nginx
      image: nginx
      ports:
        - containerPort: 80
      volumeMounts:
        - name: nginx-html-volume
          mountPath: /usr/share/nginx/html
          readOnly: true
  volumes:
    - name: nginx-html-volume
      configMap:
        name: website01-html
